@@ -115,10 +115,10 @@ CONFIG_PIC32MX_RAMFUNCS=n
 #
 CONFIG_PIC32MX_MICROCHIPW=n
 CONFIG_PIC32MX_MICROCHIPL=n
-CONFIG_PIC32MX_MICROCHIPW_LITE=y
+CONFIG_PIC32MX_MICROCHIPW_LITE=n
 CONFIG_PIC32MX_MICROCHIPL_LITE=n
 CONFIG_PIC32MX_MICROCHIPOPENL=n
-CONFIG_PIC32MX_PINGUINOW=n
+CONFIG_PIC32MX_PINGUINOW=y
 CONFIG_PIC32MX_PINGUINOL=n
 
 #
@@ -774,11 +774,10 @@ CONFIG_USBMSC_REMOVABLE=y
 #     'y' is the correct value because the serial FLASH is the only device
 #     on the SPI bus.
 #   CONFIG_DEBUG_SPI -- With CONFIG_DEBUG and CONFIG_DEBUG_VERBOSE,
-#     this will enable debug output from the PGA117 driver.
+#     this will enable debug output from the PGA117 driver (see above).
 #
 CONFIG_ADC=n
 CONFIG_SPI_OWNBUS=y
-CONFIG_DEBUG_SPI=n
 
 CONFIG_ADC_PGA11X=n
 #CONFIG_PGA11X_SPIFREQUENCY
